Integrated speech service

--- a/requirements.txt
+++ b/requirements.txt
@@ -62,3 +62,6 @@ unstructured
 unstructured[pdf]  # For better PDF support
 unstructured[all-docs]  # For all document types
 pypdf2
+
+# Speech
+pydub
