--- a/requirements.txt
+++ b/requirements.txt
@@ -208,6 +208,7 @@ typer==0.15.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 tzdata==2025.1
+pytesseract==0.3.13
 unstructured==0.17.0
 unstructured-client==0.31.1
 unstructured-inference==0.8.9
